[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.20", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }