[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.20", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
async-trait = "0.1.79"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3.31"
bytes = "1.10.1"