[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.20", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
async-trait = "0.1.79"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3.31"
bytes = "1.10.1"
flume = {version = "0.11.1", features = ["async"]}
tracing ="0.1.37"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12.1"